--- a/src/main/resources/templates/jichu/timetable_new.html
+++ b/src/main/resources/templates/jichu/timetable_new.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="x-admin-sm">
+<html class="x-admin-sm" lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
@@ -50,31 +50,36 @@
         <div class="layui-col-md12">
             <div class="layui-card">
                 <div class="layui-card-body ">
-                    <form class="layui-form" action="">
+                    <form class="layui-form" action="/courseinfo/add" method="post" enctype="multipart/form-data">
                         <div class="layui-form-item">
                             <label class="layui-form-label">课程名称</label>
                             <div class="layui-input-block">
-                                <input type="text" required  lay-verify="required" placeholder="请输入课程名称" autocomplete="off" class="layui-input">
+                                <input name="courseName" type="text" required  lay-verify="required" placeholder="请输入课程名称" autocomplete="off" class="layui-input">
                             </div>
                         </div>
                         <div class="layui-form-item">
                             <label class="layui-form-label">课程代码</label>
                             <div class="layui-input-block">
-                                <input type="text" name="password" required lay-verify="required" placeholder="请输入课程代码" autocomplete="off" class="layui-input">
+                                <input type="text" name="courseCode" required lay-verify="required" placeholder="请输入课程代码" autocomplete="off" class="layui-input">
                             </div>
                             <!--<div class="layui-form-mid layui-word-aux">辅助文字</div>-->
                         </div>
                         <div class="layui-form-item">
                             <label class="layui-form-label">课程负责人</label>
                             <div class="layui-input-block">
-                                <input type="text" name="title" required  lay-verify="required" placeholder="请输入课程负责人" autocomplete="off" class="layui-input">
+                                <select name="teacherId" lay-filter="aihao" required="required">
+                                    <a th:each="user:${userList}">
+                                        <option th:value="${user.getId()}">[[${user.username}]]</option>
+                                    </a>
+
+                                </select>
                             </div>
                         </div>
 
                         <div class="layui-form-item">
                             <label class="layui-form-label">课程图片:</label>
                             <div class="layui-upload">
-                                <input type="file"  id="test1" name="m_image" required="required" value="上传图片" onchange="xmTanUploadImg(this)"/>
+                                <input type="file" name="attachs" id="uploadImg" required="required" value="上传图片" onchange="xmTanUploadImg(this)"/>
                                 <div class="layui-upload-list">
                                     <img class="layui-upload-img" id="selectImg">
                                     <p id="demoText"></p>
@@ -83,15 +88,17 @@
                         </div>
                         <div class="layui-form-item layui-form-text">
                             <label class="layui-form-label">课程介绍:</label>
-
-                            <div class="layui-input-block" id="div1">
-                                <p>请输入课程介绍</p>
+                            <div class="layui-input-block">
+                                <input type="text" name="courseIntruduce" required lay-verify="required" placeholder="请输入课程介绍" autocomplete="off" class="layui-input">
                             </div>
+<!--                            <div class="layui-input-block" id="div1">-->
+<!--                                <p>请输入课程介绍</p>-->
+<!--                            </div>-->
                         </div>
 
                         <div class="layui-form-item">
                             <div class="layui-input-block">
-                                <button class="layui-btn" lay-submit lay-filter="formDemo">添加完成</button>
+                                <input type="submit" class="layui-btn" lay-submit lay-filter="formDemo">添加完成</input>
                                 <button type="reset" class="layui-btn layui-btn-primary">重置</button>
                             </div>
                         </div>
