--- a/src/main/resources/templates/kuangjia/frame.html
+++ b/src/main/resources/templates/kuangjia/frame.html
@@ -86,6 +86,9 @@
                                     <i class="el-icon-aim"></i>
                                     <span slot="title">权限管理</span>
                                 </template>
+                                <el-menu-item index="">角色添加</el-menu-item>
+                                <el-menu-item index="">过滤信息添加</el-menu-item>
+                                <el-menu-item index="">角色权限分配</el-menu-item>
                             </el-submenu>
                             <el-submenu index="8">
                                 <template slot="title">
